@@ -1,14 +1,0 @@
-DEFINED_PHASES=compile configure install prepare
-DEPEND=caps? ( sys-libs/libcap ) readline? ( >=sys-libs/readline-4.1-r4 ) sys-apps/texinfo virtual/pkgconfig
-DESCRIPTION=NTP client and server programs
-EAPI=5
-HOMEPAGE=http://chrony.tuxfamily.org/
-IUSE=caps ipv6 +readline +rtc selinux
-KEYWORDS=amd64 ~arm hppa ~mips ppc sparc x86
-LICENSE=GPL-2
-RDEPEND=caps? ( sys-libs/libcap ) readline? ( >=sys-libs/readline-4.1-r4 ) selinux? ( sec-policy/selinux-chronyd )
-RESTRICT=test
-SLOT=0
-SRC_URI=http://download.tuxfamily.org/chrony/chrony-1.31.tar.gz
-_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
-_md5_=e97b7c6cd11569baa7d7f78c4adf5e7e
