@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install postinst postrm preinst prepare test unpack
+DEPEND=>=dev-libs/crypto++-5.6.2 x11-libs/libICE x11-libs/libSM x11-libs/libX11 x11-libs/libXext x11-libs/libXi x11-libs/libXinerama x11-libs/libXrandr x11-libs/libXtst qt4? ( dev-qt/qtcore:4 dev-qt/qtgui:4 net-dns/avahi[mdnsresponder-compat] ) test? ( >=dev-cpp/gmock-1.6.0 ) x11-proto/kbproto x11-proto/randrproto x11-proto/xextproto x11-proto/xineramaproto x11-proto/xproto >=sys-apps/sed-4 sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 )
+DESCRIPTION=Lets you easily share a single mouse and keyboard between multiple computers
+EAPI=5
+HOMEPAGE=http://synergy-project.org/ https://github.com/synergy/synergy
+IUSE=qt4 test
+KEYWORDS=~alpha ~amd64 ~arm ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd ~x86-freebsd ~amd64-linux ~x86-linux ~x86-macos ~sparc-solaris ~x86-solaris
+LICENSE=GPL-2
+RDEPEND=>=dev-libs/crypto++-5.6.2 x11-libs/libICE x11-libs/libSM x11-libs/libX11 x11-libs/libXext x11-libs/libXi x11-libs/libXinerama x11-libs/libXrandr x11-libs/libXtst qt4? ( dev-qt/qtcore:4 dev-qt/qtgui:4 net-dns/avahi[mdnsresponder-compat] ) qt4? ( !x11-misc/qsynergy )
+SLOT=0
+SRC_URI=https://github.com/synergy/synergy/archive/v1.7.1-stable.tar.gz -> synergy-1.7.1.tar.gz http://dev.gentoo.org/~hasufell/distfiles/synergy.png
+_eclasses_=base	87f7447ccfc06fd0729ff4684e11e0d6	cmake-utils	0430c386d85cec959d72640afd63ea91	eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	c263990f1b677b0f0be0a3299f179762	gnome2-utils	5cdfd22a2163c9d3a891648bd19453a7	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	qmake-utils	ea709b525d28e3087eddedb2f884dbbe	qt4-r2	7199e3db5b5908325487d379c6f67cf0	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
+_md5_=3483f58b2a7019b8648f3d9944b76272
