@@ -6,27 +6,15 @@ AUX chronyd.conf 378 SHA256 29040502f86c419dbfbc7e2627cc658a8df82b37da21b3d1fce2
 AUX chronyd.init 1739 SHA256 82a49a66f8d6db492ca14cc685535a395b8018230aedb09ee3ad3a476fe752d5 SHA512 7c56c55a741a9a7f4d4562418a143fd0f7108d4821641ccc536c20f9878d6c0e246ef7af33c4aa404d696dbb3d75dfcd3279def1e650c3e7f16ec0b7f69b71e4 WHIRLPOOL 761b3405a0308a61999a25c2a1a0d57bf718a5d23a1ca86e25ac3b663df79c27597a3969d7dbeeed3cba9f657c44fa42cedf59394b79a9a0f37e83308fe58089
 AUX chronyd.service-r2 261 SHA256 d5996c6b8596e137b36099d0ce7974bfd8e36411d999712d2f0393ac738f3754 SHA512 671415208e123628e123575d708dbe4ed7946bc45832dce506d539cc747e84ae63783b53398e96a60d815f1758fe44836f34d804e28859538cf560715474dffe WHIRLPOOL f95d9472ad30fb06e3d0014ddc2be492dd1a6d2b5590bed27214ba1b0566d83e89e108a8df3de9dade939a9feff005bfff431d796f9e813388830e3f3dfc437b
 DIST chrony-1.31.1.tar.gz 395797 SHA256 0ba9f4b58e20b2eaae921eb8c798108ef72d8ea6fdcc7eb0167b56690d212348 SHA512 c64b0bfc52f091994774927900a12075afce876a1df66c0fc4ea8ad2b72cee189e044f886594e61b8aafb7d3ecf161a290aeff37bfd7da9d416f21b3213de2a4 WHIRLPOOL f933d10dd9a2b915d821718c3067e59c48f1beed0d8ddabba67f1b77dd19f64942ee2e7cab3d4b687ca76918b71723d44317aa91b6dcc394d776719b765831a9
-DIST chrony-1.31.tar.gz 395742 SHA256 a35e1cae46ecbe14af2023bb47a72a03d79591b2ff65f0072b3400153224996d SHA512 fcac8f61525b0c9aee83ec6c5fc4a948f6ee838ffa302661922d273ce0a9f03735fcbcd798bb1f1221d581da7601663bc4f16996dc948bd0ba10ac90caaa09a4 WHIRLPOOL 6bc01cf1ad7f2c4bf26f4ebcd4244e2e0f8aec3257f09e57ab6d419ecf52de4a78ecb41394c3f492ec0982d20156e191923cc1a8789e33d7a87dc1c9a72ef5c6
 DIST chrony-2.0-pre2.tar.gz 396791 SHA256 3d9cc401aaff295b6f40939c913c981e547a94e5982f54e5804bef4bc894a603 SHA512 edb9f8ea54aa50b057f0facbccbdb2a5748922f27ad3d0160ce02c358e75bd3007503f09ec330bfc066d23462a9c1edf231cb8a5a0c57dce86188b1fbac8d784 WHIRLPOOL 5e93f0b909ec42604bb5dd52811b2f01b52426b89597cb77cad067f07fed24bfb8d0a9786aaf22102e1da9d881fecdd465eb94425f29d36e6d948a39dc04c67f
 EBUILD chrony-1.31.1.ebuild 2577 SHA256 4a59c2ee84be4e70d2281b4a0cbef924e8a9bdfa4c3a60191144645f1e182110 SHA512 0ab3ee22989fd370052da03f5daf81e715e41fabda06a01b34f9065bdc17445773504467de9d3faba24ad4f9202311faeb99c1b53a4cb8c6475f7e87b946c8c6 WHIRLPOOL dd71f62d479027630d61d878af8d29782a31df9ab13ec08cba8ec4f66b205f470da32d550c3c6440a543a7cf2e94b69e52d6739aac739a19d0ee2bbee78c5e1f
-EBUILD chrony-1.31.ebuild 1920 SHA256 0e7370fdb6e5f63e1639ef69d85e9f9e3a3bc697320aef80f4832aba0ac9c996 SHA512 0c5c58ddb71acc360f8fa47ee547ea49f97297c1bf0124acc522c2a0a8cae38741133fb6d21ceb448eb69356394d167dfe47bdf396cae3392c8ddf49123892c2 WHIRLPOOL 7db8a60a44131a85d578e3fb324e7cd2ab54ae76bbc9ee0a843a34bd1a6200e4ac032b9301f491b2de8d7a01e4e87d2f245d6a8890ee34df79f96861c679ab08
 EBUILD chrony-2.0_pre2.ebuild 2567 SHA256 f8a6a83c7f9cb14462815e4d55e34589d9784f5c5ffc503b8ea6f969bec3990b SHA512 e088e92d1663404d4c0f9fc11af3b8abedebdcafa5244c9d8b5798e8cf5d23fc041a8eca5200fe844578b291335806d0a1edc408c712a8686ba9456684e97c6b WHIRLPOOL 4f3cf48724d6ee39047c35ec3ab73eaffc35ed9eeca4edfaf647e8304cfaf7a1c05b75d1f384ba303cddd9df56a9861a6c703580cf83c757374177f78f243824
-MISC ChangeLog 19851 SHA256 f39659b355498e7c22daba1a709dc0348799ba007d140d06d3ff80d56674cb3a SHA512 06242f0c9439d0f10059cc99b8fc155c125c90173c2a89a37f21824c9b840ea625cf17d32c945a28cc3f7084809560092b37a6e7dd34b09b61c26416f5663833 WHIRLPOOL 84611c6f4f2e6af1311fb26a2dc21ffd93f55cd3d173c20ad83124ff3f458a2bdf0e884aecef9d6f63b758136c23e25ef084e9b266f4b5d4480966dd70997128
+MISC ChangeLog 19927 SHA256 a2eaa2dc61dcbbfa88fe7c0413574cc1781df53e7183dd358f93ac407bbbda67 SHA512 38b3176f86006dab4ce49f5a308fc653036a360c6be78b073d4be566894f49969db8f77d95c5103e273d6d732249346ab34d1817216df96c301a7e9b8110056d WHIRLPOOL 733cf7b415a1c1993523ba4fb13f00bd489c5b55170760bc7c4fc7e12851b2cd7a6d91c2ddcf6f4f5edf5c98a18bb789caeb379a735eb645e3f2cbd33c694120
 MISC metadata.xml 1086 SHA256 18d59935890367a9bbe405207a32ba70aa57304075efc6814bda5128ec226d8d SHA512 2674fcc6a9d454544dcfea5002a93ec6ad9b107651d11f2d75d6d187fffa4502cb9ea1bcd3fc2a6e7dbf07b9b18e928534c0c442fbb01abff1660d726f3cd0c2 WHIRLPOOL e21367e6d4fd6a02a8bc56546c90b80fee2d5c5c9160a0f9ff6b6896babc3e7e956a0ad525adaf6fc22b16e12f1570f0f5528bdc47ee8913031b70e2757b3797
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVQKH7AAoJELp701BxlEWfjogQAMhPAXCWLkIEF4k0w15SDEjR
-L4MDJJYkcceSD9qo35SsfA/dNObwAWOXlth7l9rSE2Rgxk7xJ5vZUWdlQ4SN53aR
-Ch8x04g7c5JDPP7WQpzR+TAFMLW/2Z7oit7xt7KNbMjM+QT3xOt5WdcPmzqD8cmc
-IqHrVlSddTRarRK3YwwQnBCRUg04vaKKwddgqqtswQV6HU2YleX9OnU51iulzZTH
-jcv04D96Uv/cUoE724Cn0BdiXRzuKaQQZdUiH/+ElTp0Wn9eJx6wppHqNTehEB71
-NUUvKDETryHTIz59ICOJNvpNWyGwqUqOZB15JU512s9xAx9QYN/AxTy3Fjm/vXzD
-e/CPqaked2zZxm+d/hHgkKKxGto95M3eNcGrrKKiL7UHfKAckalg+Cl7SYtGyRBw
-+jMtqyPaPzzfRNBal3hcFUN5g7AsHB6mA8yhxU8KUaSvdTT+24NHAPVry0Bpb/7/
-GKZgVF2f6B+Z37kBK0IdqSjPRyhySZr46lgbAM9cyhNrg1I9/tn6u0HvV3+QM4uu
-HhM3UXuhCmoiAU6+mW7iuYL3iLTuUPPUWYY+hJ2xmEyzeb8YoYDTT+5Aq/wg3Mlc
-imghZRNuve+z7nw7qaMhrf3XuAvInW3EHvBcikwHT13jdilzSfdeLU9wEvTiIb7i
-2V8KBG1vkYXGEpC7xXYf
-=w6ao
+iEYEAREIAAYFAlVCUTAACgkQVWmRsqeSphPscACfV10vo9eUQp2qV4vtBBYgZWkZ
+jhYAnAo/PWWwj4dHNAYisUzuoSsOuNRh
+=pXvM
 -----END PGP SIGNATURE-----
