@@ -8,15 +8,17 @@ AUX synergy-1.4.17_p2055-gentoo.patch 344 SHA256 924b3ad8f7c4840b900a6d4f5327421
 AUX synergy-1.4.17_p2055-test.patch 977 SHA256 2373895ff2a67a44b37d634c16b474865ce992d497c4a1b05def510776870006 SHA512 92746308f3f6fe22b337d383e268328c37695e8f51ac20759557021d1149b4e4cc676846cc33d3728453284b9ae15373995d347719c1ba8af9b9d3b31d8e463f WHIRLPOOL 9b637b57668b1c8df064f69584192d29ce11f940b4f67d78a8e10f6610846e37ac3460326949efc6df78289dffd80a916c40527879cf2391a1845281b93af844
 DIST synergy-1.6.3.tar.gz 4405517 SHA256 93b1965b8e0cfc55cc654aab7053a58b9e730d09e68bbc520be32353a01dce1a SHA512 de67b0663c5ef411570f163208b2a295a8f16537dcc37a41a31039a2d01de083410c023b7f255664eb0c84f0290473690b638934082c2276ddce594126861165 WHIRLPOOL cb8737f0fe75105c9f5c8c371a5aef55c5eb8f1c419b3a7315ed66880e79c379efc6d7bced20c0d046bc281be935322def54f98d67e383d7236620a948ae1c14
 DIST synergy-1.7.0.tar.gz 8990045 SHA256 7f51c0e8ed76aec7fb14a02592248e807cb068913e154abf4ce7e326053ef4c0 SHA512 29c8c2f4d4784a45503332684f9217483f40df0ee4ee371e80411a21679234c7d34a4ada73fd4ba2218b39a9976943e8eed082152e7ef353eafeeea6bed73363 WHIRLPOOL 082944bbdc0571a1fd8c61db5c8f92b17e0f5266481b8187781d6590473c801b43b2dc08fd845876bc7ad8660a8bb739cb9347cec3d455d36230f91f58897721
+DIST synergy-1.7.1.tar.gz 8992380 SHA256 fb70b0d83a0502db005b00a63f36d73815b058fb47552236efe04af14731a16a SHA512 80f0caf0ba673de5d467ae7f7d62ff4afb5a0c7b90c2779ca5967bd1cb1193c81ec72782cd84c44d1663c5a7ff699b2b9cf0d1abff795569865bc07c9ba5f07f WHIRLPOOL 0b01a7dd9c54f84add7f440656726e93f04ef9cb3e64042380c0af02fbb637c54355c1f8c0d5d5b0ac4ad6550699640decf6c08e6361c7f0d6f0197da3c14b98
 DIST synergy.png 26910 SHA256 c7e6cbaea549a189daed46c7170477772d932144ca20c9ea0db6859bd896f08c SHA512 0b5a1813c71fd2923adca4cf7b0f840fc37c73a2f18ad68f8bb2fd2ea312d9a884e2e2bcd78f6dd0f13d1f31ea3991379e141ec62d970a18c3a9c46b26720c5d WHIRLPOOL 7b3e7f9b05462fb536de0ca8d2257ea8abc0b2f17f0335d7eee73322f79a9ecccf729b992e58cd0965a9c9842f48020b6588cd4af47ea0f6d2b2cd7793c64e3a
 EBUILD synergy-1.6.3.ebuild 2542 SHA256 3effdf681d5410c11ecb6322db9c28e8e9812632562adeb9a30caf8d29cb3d2b SHA512 5eb211c7b9c127b37c042f35c9f605785773fb19df5d36e3875587686c631346ec0b17ec47035c1680998ad7ea2390bc540d54a7cbfecf74d63ddcdf3a9269ec WHIRLPOOL 06fddbaf5ca4c1f1bdcd73342097487d471e92b1664a3753e5e5922691c920c7a6c37a36a3bef429a6125efa55187be61e636bec8b2ecb85dc7b7b5dd3a4547c
 EBUILD synergy-1.7.0.ebuild 2497 SHA256 922d560517f004b38e2a0212e98cbffa4e25f833aa304d42389996b39abbb09c SHA512 e76e58f0e5da47681d9cba069ec24feddc504e96e7ce5542169e0030c4ddf1258734ee401993121ede2d8611d67f96255a57d082991b2fd405f4d31faf8a3c3b WHIRLPOOL c821630929a3399119ff28a62ce214894f563afef769b2f8a42516927773eeb10ab4eadc204b45988b0b1a75fc57a04380d0549449b76da50ad9ed25c4ab0cc3
-MISC ChangeLog 18257 SHA256 da798980aeee41ffb18ada23ed674c124804666dd81d005ccab5f7d998e81127 SHA512 8893933dac2daac98c99890c6c4b2d69c98131b995f4db4561dd5e13d1682e2bb04b374be2e637829187f9874100f9efb7f4429c1ed88b93c621a4b9ecddebbb WHIRLPOOL 382d358de5dca56a08de31b1bc52bf8b99317cdfefcd61ee468a962b80f80090532a482b42dfc58b58e588234dfc3f9a4fd5afd3155f0b181a7b9a83ef1e6e37
+EBUILD synergy-1.7.1.ebuild 2531 SHA256 44c30f5830855b3483574f9a5656cb18aa80b21729cc7d0a8098889a80a1519a SHA512 6cfb5284db6073298bbe376b1425afc7b70872eb54bb1dec97c580580d4986f75f3fd443dd70636e523cedf669f17bd833d83d0a8e2f901ad24e1a4b80a0d9fa WHIRLPOOL 35a7bedf81d4bc81e5d69a71b8449dd2efc2f92d9cfb33e6f9c568818da72abda620cc862258067f0cc892a95ea2749876f972c9b48de676bdee21b49da8504a
+MISC ChangeLog 18374 SHA256 a369fe5af4a1f4ebdc4344f237dfc58a535cc0c91049a4fa2c5bdef6acca4228 SHA512 6d7dee371b1d6d0314b7a942d63759fe19d0fb5c0f4b2b061aed13208cc82f42907c438ed3ff3254ca9c01eaa0b613bde4d2c48e0a14b124f2664c3a132c5a21 WHIRLPOOL 2aa97665b08ff680f0359daa9b890171fda32a8657eb84a5626529d1913dc85b9d80dbc83ba7c70583334bf9638fc00e0569a0341897af861f7e84b9622feee2
 MISC metadata.xml 243 SHA256 16d6a09278140777930f22eeaf42238d2a5168e539c14f8fd7b1b2be1132539c SHA512 86dc9a5aecb9dfdabe223750574bb8469e4dd4fb89e3ea5b2a683de1f68c5829460c60d16d8a748c17f2b6daf3561d054aa5283f6a37c52a8a60fba6ebbfce14 WHIRLPOOL 9e7beb2b0a4715dcd6a1d9d22c0ce9f82b9871dabdb2693dc4f11589bb0a1aa807855fdfda2d415b0807f5e31c3e4ced43e97e2c761c967452e5bc1e52e81df5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlVBwJwACgkQVWmRsqeSphPy+gCeN43OM+jZ3i/YMSj2YZVh4pgv
-oxoAnAnMfb+DrtfxjqCKZWk+trPCF8Kx
-=3z2Q
+iEYEAREIAAYFAlVCUNMACgkQVWmRsqeSphNk8ACdHDcvsGnxolPSA9/BBVKIJxh0
+ThgAnjMnuB52nBVy9QBoGWU1mY7RgkLo
+=zvj4
 -----END PGP SIGNATURE-----
