@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/chrony
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/chrony/ChangeLog,v 1.159 2015/04/29 09:18:51 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/chrony/ChangeLog,v 1.160 2015/04/30 15:58:39 jer Exp $
+
+  30 Apr 2015; Jeroen Roovers <jer@gentoo.org> -chrony-1.31.ebuild:
+  Old.
 
   29 Apr 2015; Agostino Sarubbo <ago@gentoo.org> chrony-1.31.1.ebuild:
   Stable for sparc, wrt bug #545918
